# dwh2looker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  config.example.json  pyproject.toml  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  lint-pr-title.yml  release-please.yml
src/dwh2looker/: __main__.py  logger.py
src/dwh2looker/cli/: commands.py
src/dwh2looker/db_client/: __init__.py  db_client.py
src/dwh2looker/diff_tracker/: __init__.py  diff_tracker.py
src/dwh2looker/lookml_generator/: __init__.py  config.py  generators.py  lookml_generator.py  models.py  writer.py
src/dwh2looker/lookml_generator/templates/: dimension.lkml.j2  dimension_group.lkml.j2  explore.lkml.j2  join.lkml.j2  lookml_view.j2  refined_view.j2  view.lkml.j2
src/dwh2looker/vc_client/: __init__.py  vc_client.py
src/tests/: conftest.py  test_bq_client.py  test_complex_schema_generation.py  test_db_client.py  test_dimension_group_issue.py  test_generators.py  test_lookml_generator.py  test_primitive_array_sql.py  test_unnested_view_nested_fields.py
