# pyproject.toml

[project]
name = "dwh2looker"
version = "1.1.1"
description = "Sync your data warehouse tables to Looker"
authors = [
    {name = "Yousef Salhamoud", email = "yousef.saleh@devoteam.com"},
]
license = {text = "GPL-3.0"}
readme = "readme.md"
requires-python = ">=3.9"
keywords = ["dwh2looker", "looker", "sync", "lookml", "dbt", "data warehouse"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "PyGithub>=2.3.0",
    "jinja2>=3.1.2",
    "pydantic>=2.5.2",
]

[project.urls]
homepage = "https://github.com/yousefsalhamoud/dwh2looker"
repository = "https://github.com/yousefsalhamoud/dwh2looker"

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.10.0"]
redshift = ["psycopg2>=2.9.9"]
postgres = ["psycopg2>=2.9.9"]
snowflake = ["snowflake-connector-python>=3.8.1"]
dev = ["pytest", "python-dotenv", "ruff", "pre-commit"]
all = [
    "google-cloud-bigquery>=3.10.0",
    "psycopg2>=2.9.9",
    "snowflake-connector-python>=3.8.1",
    "pytest",
    "python-dotenv",
    "ruff",
    "pre-commit",
]

[project.scripts]
dwh2looker = "dwh2looker.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
